<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <androidx.appcompat.widget.Toolbar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".9"
                    android:id="@+id/toolbar"
                    app:title="TLP Installationn">

                </androidx.appcompat.widget.Toolbar>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:id="@+id/back_textview_toolbar"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_arrow_back"
                    />

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_marginBottom="2dp"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/client_name">
                </TextView>
                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:layout_width="0dp"
                    android:id="@+id/spClientName"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">
                </com.toptoche.searchablespinnerlibrary.SearchableSpinner>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="3">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Contractor"
                    android:layout_weight="1">
                </androidx.appcompat.widget.AppCompatTextView>
                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:id="@+id/spContractor"
                    >

                </com.toptoche.searchablespinnerlibrary.SearchableSpinner>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:padding="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/section_name">
                </TextView>
                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:layout_width="0dp"
                    android:id="@+id/spSectionName"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">
                </com.toptoche.searchablespinnerlibrary.SearchableSpinner>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Add"
                    android:visibility="visible"
                    android:id="@+id/btnAddSectionName"
                    android:textColor="@color/white"
                    android:background="@color/design_default_color_primary_dark">
                </androidx.appcompat.widget.AppCompatButton>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sectionGroup"
                android:visibility="gone"
                android:weightSum="3"
                android:padding="5dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:inputType="textCapCharacters"
                    android:layout_height="wrap_content"
                    android:id="@+id/etSectionName">
                </androidx.appcompat.widget.AppCompatEditText>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="@string/save"
                    android:id="@+id/btnsaveSectionName"
                    android:background="@color/colorPrimaryDark">
                </androidx.appcompat.widget.AppCompatButton>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/section_no">
                </TextView>
                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:layout_width="0dp"
                    android:id="@+id/spSectionNo"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">
                </com.toptoche.searchablespinnerlibrary.SearchableSpinner>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Add"
                    android:visibility="visible"
                    android:id="@+id/btnAddSectionNo"
                    android:textColor="@color/white"
                    android:background="@color/design_default_color_primary_dark">
                </androidx.appcompat.widget.AppCompatButton>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sectionNoGroup"
                android:visibility="gone"
                android:weightSum="3"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:inputType="textCapCharacters"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content"
                    android:id="@+id/etSectionNo">
                </androidx.appcompat.widget.AppCompatEditText>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:id="@+id/btnsaveSectionNo"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="Save"

                    android:background="@color/colorPrimaryDark">
                </androidx.appcompat.widget.AppCompatButton>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
          android:id="@+id/linear_diameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:padding="5dp"
            android:visibility="visible"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/pipe_dia_amp_thickness">
            </androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/diameter"
                android:inputType="textCapCharacters"
                android:layout_height="wrap_content"
                android:hint="@string/enter_diameter_and_thickness">
            </androidx.appcompat.widget.AppCompatEditText>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:padding="5dp"
            android:visibility="visible"
            android:id="@+id/linear_specification"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/pipe_specification">
            </androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:inputType="textCapCharacters"
                android:layout_height="wrap_content"
                android:id="@+id/specification"
                android:hint="@string/enter_pipe_specification">
            </androidx.appcompat.widget.AppCompatEditText>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:padding="5dp"
            android:visibility="visible"
            android:id="@+id/linear_length"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/pipe_section_length">
            </androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:inputType="textCapCharacters"
                android:layout_height="wrap_content"
                android:id="@+id/length"
                android:hint="@string/enter_pipe_section_length">
            </androidx.appcompat.widget.AppCompatEditText>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tlp">
        </FrameLayout>
        </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
<com.google.android.material.navigation.NavigationView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/nav_header"
    app:menu="@menu/menuitem_menu"
    android:id="@+id/navigation_view"
    app:itemIconTint="@color/cardview_dark_background"
    app:itemTextColor="#000"

/>

</androidx.drawerlayout.widget.DrawerLayout>